--- a/source/sass/blocks/modal-login.scss
+++ b/source/sass/blocks/modal-login.scss
@@ -26,7 +26,7 @@
   width: 430px;
   min-height: 586px;
   margin: 0 auto;
-  top: 8%;
+  top: 9%;
   padding: 0 40px;
   background-color: #f0eae4;
   box-shadow: 0 5px 32px rgba(226, 221, 215, 0.24);
@@ -37,6 +37,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/login-img@2x.jpg");
+    background-size: 430px;
   }
 
   @media (max-width: $mobile-breakpoint) {
@@ -78,7 +79,7 @@
 }
 
 .modal-login__box form label {
-  margin-bottom: 40px;
+  margin-bottom: 38px;
 
   @media (max-width: $mobile-breakpoint) {
     margin-bottom: 30px;
@@ -86,11 +87,13 @@
 }
 
 .modal-login__box form input {
-  border: none;
+  outline: none;
+  border: 1px solid transparent;
   border-bottom: 1px solid #1d1613;
+  border-radius: 0;
   background-color: transparent;
   width: 100%;
-  padding-bottom: 8px;
+  padding-bottom: 10px;
 
   &::placeholder {
     font-family: $main-text-font;
@@ -99,6 +102,11 @@
     font-size: 14px;
     line-height: 21px;
     color: #9b9997;
+  }
+
+  &:focus {
+    border-radius: 0;
+    border: 1px solid #1d1613;
   }
 }
 
@@ -178,13 +186,12 @@
 
 .modal-login__close {
   border: 0;
-  outline: 0;
   background: 0 0;
   width: 20px;
   height: 20px;
   padding: 0;
   position: absolute;
-  right: 20px;
+  right: 14px;
   top: 18px;
   cursor: pointer;
 }
@@ -193,8 +200,8 @@
 .modal-login__close::before {
   content: "";
   position: absolute;
-  top: 6px;
-  left: 11px;
+  top: 10px;
+  left: -2px;
   width: 24px;
   height: 2px;
   background-color: #1d1613;
