--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/page-body.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/site-map.scss";
 @import "blocks/promo.scss";
 @import "blocks/shop.scss";
 @import "blocks/slider-swiper.scss";
