--- a/source/sass/blocks/follow.scss
+++ b/source/sass/blocks/follow.scss
@@ -1,6 +1,10 @@
 .follow {
   margin-bottom: 50px;
 
+  @media (max-width: $tablet-breakpoint) {
+    margin-bottom: 33px;
+  }
+
   @media (max-width: $mobile-breakpoint) {
     margin-bottom: 75px;
   }
